Criando o cadastro de produto

--- a/ProjetoFarmacia/nbproject/project.properties
+++ b/ProjetoFarmacia/nbproject/project.properties
@@ -30,7 +30,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${reference.FarmaciaRM.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +60,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.FarmaciaRM=../../../../NetBeansProjects/FarmaciaRM
+reference.FarmaciaRM.jar=${project.FarmaciaRM}/dist/FarmaciaRM.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
