--- a/ProjetoFarmacia/nbproject/project.properties
+++ b/ProjetoFarmacia/nbproject/project.properties
@@ -32,8 +32,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
-    ${reference.FarmaciaRM.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,8 +61,6 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.FarmaciaRM=../../../../NetBeansProjects/FarmaciaRM
-reference.FarmaciaRM.jar=${project.FarmaciaRM}/dist/FarmaciaRM.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
